LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/Customer_Setup_Task__c.object-meta.xml
<CustomObject>
    <description>2020-03-05 - N. Ehrmann - A Detail record to Customer Setup. These tasks represent additional work for add-ons. They are created by OpportunityTrigger &gt; TriggerDispatcher &gt; ClosedWonCustomerSetup.</description>
    <label>Customer Setup Task</label>
    <nameField>
        <label>Customer Setup Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Setup Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>