LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/AUTOREC_Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>AUTOREC_Setup_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoRec Setup Complete</label>
    <type>Checkbox</type>
</CustomField>