LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/AUTOREC_Setup_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>AUTOREC_Setup_Complete_Date__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO - Populated by WF rule. The date that the Autorec setup is complete.</description>
    <label>Autorec Setup Complete Date</label>
    <type>Date</type>
</CustomField>