LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/AUTOREC_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>AUTOREC_Training_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2020-05-15 - N. Ehrmann - MANUAL - Indicates that Autorec training was completed.</description>
    <label>Autorec Training Complete</label>
    <type>Checkbox</type>
</CustomField>