LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/AUTOREC_Training_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>AUTOREC_Training_Complete_Date__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO - Populated by WF Rule. The date that Autorec training was completed.</description>
    <label>Autorec Training Complete Date</label>
    <type>Date</type>
</CustomField>