LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/CLOUDCONNECT_Activated__c.field-meta.xml
<CustomField>
    <fullName>CLOUDCONNECT_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2020-05-15 - N. Ehrmann - MANUAL - Indicates that CloudConnect has been activated.</description>
    <label>CloudConnect Activated</label>
    <type>Checkbox</type>
</CustomField>