LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/CLOUDCONNECT_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>CLOUDCONNECT_Activated_Date__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO - Populated by WF Rule. The date that CloudConnect was activated.</description>
    <label>CloudConnect Activated Date</label>
    <type>Date</type>
</CustomField>