LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO - Populated by WF rules. The date the task was completed.</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>