LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/Customer_Setup__c.field-meta.xml
<CustomField>
    <fullName>Customer_Setup__c</fullName>
    <description>2020-05-08 - N. Ehrmann - AUTO - Set by ClosedWonSetupCreate. The parent record for this task.</description>
    <label>Customer Setup</label>
    <referenceTo>Customer_Setup__c</referenceTo>
    <relationshipLabel>Setup Tasks</relationshipLabel>
    <relationshipName>Customer_Setup_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>