LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO - The number of days from Opportunity close that it took to complete this task.</description>
    <formula>IF(
   ISPICKVAL(Status__c, &quot;Not Done&quot;),
   TODAY() - Customer_Setup__r.Opportunity__r.CloseDate,
   Completed_Date__c - Customer_Setup__r.Opportunity__r.CloseDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>