LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/FLUX_Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>FLUX_Docs_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flux Docs Received</label>
    <type>Checkbox</type>
</CustomField>