LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/FLUX_Docs_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>FLUX_Docs_Received_Date__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO - Populated by WF Rule. The date Flux documents were received.</description>
    <label>Flux Docs Received Date</label>
    <type>Date</type>
</CustomField>