LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/FLUX_Setup_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>FLUX_Setup_Complete_Date__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO - Populated by WF Rule. The date that Flux Setup Complete was checked.</description>
    <label>Flux Setup Complete Date</label>
    <type>Date</type>
</CustomField>