LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/FLUX_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>FLUX_Training_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flux Training Complete</label>
    <type>Checkbox</type>
</CustomField>