LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/FLUX_Training_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>FLUX_Training_Complete_Date__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO - Populated by WF Rule. The date that Flux training was complete.</description>
    <label>Flux Training Complete Date</label>
    <type>Date</type>
</CustomField>