LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO - Populated by WF Rules. The overall status of the task.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Done</fullName>
                <default>true</default>
                <label>Not Done</label>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>