LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/recordTypes/AutoRec.recordType-meta.xml
<RecordType>
    <fullName>AutoRec</fullName>
    <active>true</active>
    <description>2020-03-05 - N. Ehrmann - Tasks for AutoRec setup.</description>
    <label>AutoRec</label>
</RecordType>