LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/recordTypes/Flux.recordType-meta.xml
<RecordType>
    <fullName>Flux</fullName>
    <active>true</active>
    <description>2020-03-05 - N. Ehrmann - Tasks for Flux setup.</description>
    <label>Flux</label>
</RecordType>