LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup_Task__c/recordTypes/FQ_Connect_FTP.recordType-meta.xml
<RecordType>
    <fullName>FQ_Connect_FTP</fullName>
    <active>true</active>
    <description>2020-03-05 - N. Ehrmann - Tasks for FloQast Connect FTP setup.</description>
    <label>FloQast Connect - FTP</label>
</RecordType>